# minions

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MicroBot.py  README.md  SUPPORT.md  TESTING.md  __init__.py  agent.py  agent_utils.py  architechture.md  constants.py  demo_user_experience.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  run_integration_tests.py  test.py  test_guide.py  validate_installation.py
.github/workflows/: DockerBuildPush.yml  docker-build-push.yml  dockerBuildPush.yml  pages.yml  publish.yml  rerun-failed-tests.yml  test.yml
Environment/: Dockerfile  Environment.py  LocalDockerEnvironment.py  ShellCommunicator.py  TestLocalDockerEnvironment.py  Test_LocalDockerEnvironment.py  __init__.py  docker_shell.py
Environment/Image/: Dockerfile
Environment/swe-rex/: LocalDocker.py
agents/: BrowserAgent.py  CustomAgent.py  ReadingAgent.py  WritingAgent.py
bot/: BrowsingBot.py  CustomBot.py  ReadingBot.py  WritingBot.py
code/: countries.txt
constants/: constants.py
docs/: README.md  TESTING.md  authentication.md  cnp_learning_presentation_gemini.html  conference-presentation-outline.md  index.md  presentation-titles.md
docs/blog/: index.md  microbots-safety-first-ai-agent.md  safety_first_ai_agents.md
docs/getting-started/: home.md
docs/guides/: index.md
docs/javascripts/: lightbox.js
docs/stylesheets/: extra.css
environment/local_docker/: LocalDockerEnvironment.py  __init__.py
environment/swe-rex/: LocalDocker.py
llm/: openai_api.py
presentation/: cnp_learning_presentation_gpt5.html  presentation.html
src/microbot/: MicroBot.py  __init__.py
src/microbots/: MicroBot.py  __init__.py  constants.py
test/: conftest.py  test_constants.py
test/bot/: browsing_bot_test.py  test_agent_boss.py  test_bot_with_memory_tool.py  test_browsing_bot.py  test_copilot_auth.py  test_copilot_bot.py  test_lead_bot.py  test_log_analysis_bot.py  test_memory_tool_integration.py  test_microbot.py  test_reading_bot.py  test_writing_bot.py  (+2 more)
tests/: __init__.py
tool/: tool.py
tool_definitions_to_delete/: ctags.py  node.py
tools/: nodejs.py  tool.py  tools.py
types_and_constants/: agent.py
utils/: agent_utils.py  logger.py
(+106 files in other folders)
