[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Microbot"  # package name on PyPI (unique)
version = "0.0.2"
dynamic = ["dependencies"]
description = "container-based autonomous agent framework"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["agent", "bot", "micro"]
authors = [
    { name = "xxx", email = "xxx@example.com" }
]
classifiers = [
  "Operating System :: OS Independent",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0", 
    "pydantic>=2.0.0"
]
http = ["aiohttp>=3.8.0"]
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0", 
    "aiohttp>=3.8.0"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.urls]
"Source Repo" = "https://github.com/microsoft/minions"
Issues = "https://github.com/microsoft/minions/issues"